--- a/first/css/style.css
+++ b/first/css/style.css
@@ -1,11 +1,10 @@
 .header {
     width: 100%;
-    min-height: 50px;
     border: 1px solid black;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 0 20px 0 0;
+    padding: 5px 20px 5px 0;
     box-sizing: border-box;
 }
 .cart-button, .buy-button {
@@ -24,5 +23,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;  
+    width: 20%;
+}
+.goods-list img {
+    border: 1px solid black; 
 }
