--- a/second/chat.css
+++ b/second/chat.css
@@ -124,7 +124,8 @@
     border: 1px solid green;
     border-radius: 3px;
     top: 10px;
-    left: 10px;
+    left: 7px;
+    z-index: 1;
 }
 
 .new-sent-message {
@@ -151,4 +152,24 @@
     left: -23px;
     border: 15px transparent solid;
     border-right: 15px lightgreen solid;
+}
+
+.chat-buttons {
+    z-index: 10;
+    background: transparent;
+    position: absolute;
+    top: 15%;
+    left: 90%;
+    display: flex;
+    flex-direction: column;
+}
+
+.attach-button,
+.smile-button {
+    width: 25px;
+    height: 25px;
+    border: none;
+    padding: 0;
+    margin: 0;
+    background: transparent;
 }
