--- a/third/widgets/chat.css
+++ b/third/widgets/chat.css
@@ -1,8 +1,8 @@
 .chat-wrap {
     display: flex;
     position: fixed;
-    bottom: 7%;
-    right: 7%;
+    bottom: 10px;
+    left: 10px;
     z-index: 10;
     box-sizing: border-box;
     border-radius: 8px 35px 0 0;
